exports[`Home renders 1`] = `
<div>
  <HelmetWrapper
    encodeSpecialCharacters={true}>
    <title>
      میاریم
    </title>
  </HelmetWrapper>
  <PageHead />
  <div
    className="container">
    <Component
      name="firstInsideContainer">
      <List
        items={Array []} />
    </Component>
  </div>
</div>
`;

exports[`Home renders items 1`] = `
<div>
  <HelmetWrapper
    encodeSpecialCharacters={true}>
    <title>
      میاریم
    </title>
  </HelmetWrapper>
  <PageHead />
  <div
    className="container">
    <Component
      name="firstInsideContainer">
      <List
        items={
          Array [
            Object {
              "id": 1,
              "images": Array [],
            },
            Object {
              "id": 2,
              "images": Array [],
            },
          ]
        } />
    </Component>
  </div>
</div>
`;
